# SINA

./: .bumpversion.cfg  .gitignore  .gitmodules  .travis.yml  CHANGELOG  Makefile.am  README.md  README.rst  arb_LICENSE.txt  arb_PUBLIB_LICENSE.txt  autogen.sh  circle.yml  configure.ac
.circleci/: config.yml
ci_scripts/: install_conda.sh
doc/: Makefile  man.md  sina.tex
doc/source/: CHANGELOG.rst  commandline.rst  conf.py  fields.rst  index.rst  install.rst
include/: pstream.h
include/spdlog/details/: console_globals.h
include/spdlog/fmt/bundled/: ranges.h
include/spdlog/sinks/: ansicolor_sink.h
m4/: arb.m4  tbb.m4  tbb_malloc.m4  util.m4
src/: align.cpp  align.h  aligned_base.cpp  aligned_base.h  alignment_stats.cpp  alignment_stats.h  buffer.h  cache.h  copy_alignment.h  cseq.cpp  cseq.h  cseq_comparator.cpp  cseq_comparator.h  cseq_impl.h  famfinder.cpp  famfinder.h  graph.cpp  graph.h  helpers.h  idset.h  kmer.h  kmer_search.cpp  kmer_search.h  kmer_test.cpp  log.cpp  log.h  mesh.h  mesh_debug.h  mseq.cpp  mseq.h  null_filter.h  object_pipe.h  pipe.h  progress.h  pseq.cpp  pseq.h  psina  psina.in  query_arb.cpp  query_arb.h  (+23 more)
src/unit_tests/: aligned_base_test.cpp  boilerplate.cpp  cseq_comparator_test.cpp  cseq_test.cpp  famfinder_test.cpp  idset_test.cpp  integration.test  kmer_search_test.cpp  kmer_test.cpp  progress_test.cpp  query_arb_test.cpp  rw_csv_test.cpp  test_helper.sh
tests/: accuracy.test  accuracy_kmer.test  align.test  infocommands.test  readwrite.test  search.test  test_helper.sh  test_helper.sh.in
tools/: fasplit  fix_libpaths.sh  test_driver.sh
